--- a/index.css
+++ b/index.css
@@ -1,257 +1,393 @@
-body {
+* {
+    padding: 0;
+    margin: 0;
+}
 
-    background-color: #212228;
+body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #0a0707;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/*Meu menu*/
 nav {
 
-    height: 40px;
-    background-color: #e0e0e0;
-    box-shadow: 2px 2px 12px rgba(0,0,0,0.8);
-    border-radius: 50px;
-    border: 1px solid black;
+    width: 100vw;
+    height: 80px;
+    background-color: rgb(32, 32, 32);
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 1px 1px 0px white;
 
 }
 
 nav ul {
+
+    width: 20vw;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    list-style-type: none;
 
 }
 
-nav img {
+nav ul li {
+
+    display: flex;
+    color: white;
+
+}
+
+nav a {
+
+    text-decoration: none;
+    color: white;
+}
+
+nav ul a li:hover {
+
+    color: #ff7c08;
+}
+
+nav .redes {
+
+    width: 15vw;
+}
+
+nav .redes img {
+
     width: 20px;
     height: 20px;
-    padding: 10px;
-    margin-top: -15px;
+    padding-left: 20px;
 }
 
-.global {
+nav .redes img:hover {
+    width: 25px;
+    height: 25px;
+}
 
-    padding-top: 80px;
+nav .logo {
+    width: 10vw;
+    margin-left: 3%;
+}
+
+/*Fim do navegador*/
+
+/*Começo do banner*/
+.banner {
+
+    width: 100vw;
+    height: 500px;
     display: flex;
+
+}
+
+.banner #sobre {
+
+    width: 50vw;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.sobremim {
+
+    width: 50vw;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-}
-
-.global img {
-
-        border-radius: 40%;
-        border: 5px solid #be0802;
-        width: 250px;
-        height: 250px;
-        box-shadow: 2px 2px 12px rgba(0,0,0,0.9);
-    
-}
-
-.titulo {
-
-    padding-left: 80px;
-    margin-top: -250px;
-    margin-bottom: 220px;
-}
-
-.titulo h1 {
-
-    color: #be0802;
-    font-family: 'Bebas Neue', cursive;
-    text-shadow: 3px 3px 3px #2c0201;
-    
-}
-
-.titulo p {
-
-    color: white;
-    margin-top: -20px;
-}
-
-
-.continua p {
-
-    width: 600px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-}
-
-.skill {
-
-    background-color: #16171b;
-    border: 1px solid #ffffff15;
-    height: 400px;
-    display: flex;
-    justify-content: space-evenly; 
+    align-items: center;
+    padding-left: 30px;
 
 }
 
+.sobremim h1 {
 
-
-.skill li {
-
-    color: rgb(255, 255, 255);
-    margin-left: 2px;
-    font-family: Helvetica;
-    font-size: 16px;
-    padding-right: 2px;
-    list-style-type: none;
-    padding-bottom: 10px;
-    text-align: center;
-
-}
-
-.skill h1 {
-
-    color: white;
-    text-shadow: 3px 3px 3px #2c0201;
-    display: flex;
-    justify-content: center;
-    font-family: 'Bebas Neue', cursive;
+    font-size: 100px;
+    color: #ffffff;
     margin-top: -50px;
-    margin-right: -30px;
+    margin-bottom: 30px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-.efeito {
+strong {
 
-    color: black;
-    background-color: #be0802;
-    height: 300px;
-    width: 300px;
-    margin-top: 20px;
-    border-radius: 10px;
-    box-shadow: 2px 2px 12px rgba(0,0,0,0.8);
-    margin: 50px;
- 
-}
-.skill img p {
-
-      padding-right: 400px;
-      padding-top: 25px;
-      padding-left: 14px;
+    color: #ff7c08;
 
 }
 
-.skill img {
+.sobremim p {
 
-    background-color: aliceblue;
-    width: 200px;
-    border-radius: 5px;
-    width: 50px;
-    height: 50px;
-    padding: 5px 10px 5px 10px;
-    border: 1px #16171b;
-
+    font-size: 25px;
+    color: gray;
+    padding-top: 10px;
 }
 
-.portifolio {
+.banner #eu {
 
-    height: 100%;
-    color: #be0802;
-    font-size: 20px;
-    font-family: 'Bebas Neue', cursive;
-    text-shadow: 3px 3px 3px #2c0201;
-
-
-}
-
-.portifolio h1 {
-
-    text-align: center;
-}
-
-
-.trabalhos {
-
+    width: 50vw;
+    height: 500px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
 }
 
-.trabalhos img {
+#eu .foto img {
 
-    width: 400px;
+    width: 300px;
     height: 300px;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    margin-right: 50px;
-    border: 1px solid rgb(0, 0, 0);
-    box-shadow: 2px 2px 12px rgba(0,0,0,0.8);
-    margin-bottom: 70px;
+    border-radius: 20px 0px 0px 0px;
+    box-shadow: 15px 15px 1px white;
+}
+
+/*efeito da minha foto*/
+#eu .foto img:hover {
+
+    width: 310px;
+    height: 310px;
 
 }
 
-.ctt {
-    
-    background-color: #16171b;
-    border: 1px solid #ffffff15;
-    height: 800px;
-    font-size: 20px;
-}
+/*Fim do banner*/
 
-.ctt h1 {
+/*meus hobbies*/
 
-    height: 100%;
-    color: #be0802;
-    font-family: 'Bebas Neue', cursive;
-    text-shadow: 3px 3px 3px #2c0201;
+.hobbies {
 
+    width: 100vw;
+    height: 500px;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
 
 }
 
-.ctt h1 {
+.hobbies #fotoh {
 
-    text-align: center;
+    width: 30vw;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
-fieldset {
+.hobbies #fotoh img {
 
-    border: 0px;
-    margin-left: 43%;
-    margin-top: -750px;
+    background-color: #0a0707;
+    border-radius: 0px 20px 0px 0px;
+    padding: 30px 50px 30px 50px;
+    box-shadow: -15px 15px 1px #ff7c08;
+
 }
 
-form div {
+/*efeito da foto principal do meu hobbie*/
+
+.hobbies #fotoh img:hover {
+
+    width: 200px;
+}
+
+.hobbies #meush {
 
     display: flex;
     flex-direction: column;
-    margin-bottom: 10px;
 }
 
-form input, form textarea {
 
-    width: 200px;
-    font-family: Arial, Helvetica, sans-serif;
+#meush {
+
+    display: flex;
+    justify-content: right;
+    align-items: flex-end;
+    padding-right: 40px;
+}
+
+#meush .iconesh {
+
+    width: 65vw;
+}
+
+#meush .iconesh img {
+
+    width: 32px;
+    height: 32px;
+    padding: 5px 10px 5px 10px;
+    border-radius: 10px 0px 10px 0px;
+    box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.2);
+    margin-top: 300px;
+    margin-left: 90px;
+    opacity: 0.2;
+
+}
+
+/*efeito dos icones dos meus hobbies*/
+
+#meush .iconesh img:hover {
+    opacity: 0.9;
+    width: 40px;
+    height: 40px;
+    background-color: #ff7c08;
+}
+
+#meush h1 {
+    font-size: 40px;
+}
+
+/*Final dos hobbies*/
+
+/*meus projetos*/
+
+.projetos {
+
+    width: 100vw;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    color: #ffffff;
+
+}
+
+#galeria {
+
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 40px;
+}
+
+.projetos #galeria img {
+
+    width: 450px;
+    height: 300px;
+    border: 2px solid white;
+
+}
+
+/*efeito galeria*/
+
+.projetos #galeria img:hover {
+
+    width: 455px;
+    height: 305px;
+    border: 2px solid #ff7c08;
+}
+
+.projetos #projetot h1 {
+    font-size: 40px;
+    padding-top: 20px;
+    padding-left: 40px;
+}
+
+/*Contato*/
+
+.cttt h1 {
+    display: flex;
+    justify-content: right;
+    align-items: flex-end;
+    padding-right: 40px;
+    background-color: #ffffff;
+    padding-top: 20px;
+    font-size: 40px;
+}
+
+.contato {
+
+    width: 100vw;
+    height: 700px;
+    background-color: #ffffff;
+    color: #0a0707;
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+
+}
+
+#ctt {
+
+    display: flex;
+    flex-direction: column;
+}
+
+#ctt label {
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    font-size: 30px;
+    color: #0505052f;
+    padding: 10px 0px 10px 0px;
+}
+
+#ctt input {
+
+    width: 400px;
+    height: 30px;
+    padding: 5px 10px 5px 10px;
+    outline: none;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+    border: none;
+    background-color: #e9e9e952;
     font-size: 20px;
-    padding: 20px;
-    border: 1px solid #ffffff15;
-    background-color:#16171b;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    color: white;
+
 }
 
-label {
+#ctt textarea {
 
-    color: white;
-    padding-bottom: 5px;
+    width: 400px;
+    height: 300px;
+    padding: 5px 10px 5px 10px;
+    outline: none;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+    border: none;
+    background-color: #e9e9e952;
+    font-size: 20px;
+
 }
 
-button {
+#ctt #btt {
 
-    width: 240px;
-    background-color: #be0802;
-    border: 1px solid #2c0201;
-    color: white;
-    padding: 10px 15px 10px 15px;
-    text-align: center;
-    border-radius: 50px;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 30px;
 }
 
+#ctt #btt button {
+
+    width: 150px;
+    height: 50px;
+    background-color: #0505052f;
+    color: white;
+    font-size: 16px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+
+}
+
+/*efeito botão*/
+
+#ctt #btt button:hover {
+
+    background-color: #ff7b0883;
+    color: #0a0707;
+}
+
+/*--rodape*/
 footer {
-
-    background-color: #16171b;
-    height: 60px;
-    margin-top: 20px;
-    border: 2px solid #212228;
-    text-align: center;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     font-size: 12px;
